--- a/filmsstudio/src/index.css
+++ b/filmsstudio/src/index.css
@@ -1,3 +1,6 @@
+// css
+
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Montserrat:wght@100&family=Open+Sans&family=Poppins:wght@300;400;500;600&display=swap');
 @import "react-alice-carousel/lib/alice-carousel.css";
 
